--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
         <header>
@@ -26,11 +27,28 @@
               </div>
             </div>
           </nav>
+          <!-- Bootstrap--> 
+                     <!-- left side carousel --> 
+          <div class="container"></div>
+          <div class="carousel">
+            <div class="carousel-inner" id="carousel">
+              <div class="carousel-item">
+                <img src="" alt="Slide 1">
+              </div>
+              <div class="carousel-item">
+                <img src="" alt="Slide 2">
+              </div>
+              <div class="carousel-item">
+                <img src="" alt="Slide 3">
+              </div>
+            </div>
+            <button class="carousel-btn prev" onclick="prevSlide()">Prev</button>
+            <button class="carousel-btn next" onclick="nextSlide()">Next</button>
+          </div>
           <!-- Right side -->
           <div class="text-box">
-            <h2>Information Box</h2>
-            <p></p>
-            <p></p>
+            <h4>Information Box</h4>
+            <p>.. sdaf af.</p>
           </div>
         </div>
 
