Cost and Financial Aid finished

--- a/Cost.html
+++ b/Cost.html
@@ -4,11 +4,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <title>NJIT</title>
 
     </head>
     <body>
         <header>
-            <h1>Welcome to NJIT</h1>
+            <h1>Cost and Financial Aid</h1>
         </header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -45,10 +46,53 @@
                             <li>Cost per credit hour: $1,500 for undergraduate and $1,800 for graduate students</li>
                         </ul>
                         <br>
-                        <a href="https://www.njit.edu/admissions/tuition" class="btn btn-primary">Learn More</a>
+                        <a href="https://www.usnews.com/best-colleges/njit-2621/paying#:~:text=New%20Jersey%20Institute%20of%20Technology's,out%2Dof%2Dstate%20students." class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
-            
+
+            <!-- Financial Aid Options  -->
+            <div class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        Financial Aid Options
+                    </div>
+                    <div class="card-body">
+                        <ul>
+                            <li>Merit based scholarships: Available for high-achieving students</li>
+                            <li>Need based financial aid: Based on FAFSA results</li>
+                            <li>Federal Direct Loans: Subsidized and unsubsidized options</li>
+                            <li>State grants: New Jersey State Grant programs for eligible students</li>
+                            <li>Work study programs: Part-time jobs for students to help pay educational expenses</li>
+                        </ul>
+                        <br>
+                        <a href="https://www.njit.edu/financialaid/" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Payment Plans and Deadlines  -->
+            <div class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-header">
+                        Payment Plans and Deadlines
+                    </div>
+                    <div class="card-body">
+                        <ul>
+                            <li>Payment plans: Options available to spread tuition payments over the semester</li>
+                            <li>Fall tuition payment deadline: Typically in mid-August</li>
+                            <li>Spring tuition payment deadline: Typically in early January</li>
+                            <li>Refund policy: Full refund if withdrawal occurs before the start of classes</li>
+                            <li>Contact the financial services office for assistance: </li>
+                        </ul>
+                        <br>
+                        <a href="https://www.njit.edu/bursar/payment-information" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     </body>
 </html>
