--- a/AcademicPrograms.html
+++ b/AcademicPrograms.html
@@ -4,11 +4,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
-
+<title>NJIT</title>
     </head>
     <body>
         <header>
-            <h1>Welcome to NJIT</h1>
+            <h1>Academic Programs</h1>
         </header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
