--- a/Cost.html
+++ b/Cost.html
@@ -8,6 +8,7 @@
 
     </head>
     <body>
+        <body style="background-image: url('financial_aid.jpg'); background-size: cover; background-position: center;"></body>
         <header>
             <h1>Cost and Financial Aid</h1>
         </header>
