--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <p>Phone:(973) 596-3000</p>
 
               <h5>Early Action Application Deadline 2024</h5>
-                   <p> <div id="countdown"  style="color: white;"></div></p>
+                   <p> <div id="countdown"  style="color: rgb(255, 255, 255);"></div></p>
 
           </div>
         </div>
